# janus-mobile-sdk

./: .editorconfig  .gitignore  .gitmodules  404.html  CONTRIBUTION.md  Cargo.toml  Makefile  Package.swift  README.md  android.Makefile  build-ios.sh  build.rs  index.html  ios.Makefile  ios.makefile  print.html  rust-toolchain.toml  searchindex.js  searchindex.json  uniffi.toml
.github/: release.yml
.github/workflows/: cd.yml  ci.yml  gh-pages.yml
android/: build.gradle.kts  settings.gradle.kts
android/bindings/: build.gradle.kts
android/bindings/src/androidTest/java/com/ghamza/janus/bindings/: ExampleInstrumentedTest.kt
android/bindings/src/main/java/com/ghamza/janus/bindings/: janus_gateway.kt
android/bindings/src/test/java/com/ghamza/janus/bindings/: ExampleUnitTest.kt
android/buildSrc/src/main/kotlin/: GradleConfig.kt
android/core/: build.gradle.kts
android/core/src/androidTest/java/com/ghamza/janus/core/: ExampleInstrumentedTest.kt
android/core/src/main/java/com/ghamza/janus/core/: JaConfig.kt  JaConnection.kt  JaHandle.kt  JaSession.kt  JanusLogger.kt
android/core/src/test/java/com/ghamza/janus/core/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
android/plugins/: build.gradle.kts
android/plugins/src/androidTest/java/com/ghamza/janus/plugins/: ExampleInstrumentedTest.kt
android/plugins/src/main/java/com/ghamza/janus/plugins/: JaEchotestHandle.kt  JaHandleExt.kt
android/plugins/src/test/java/com/ghamza/janus/plugins/: ExampleUnitTest.kt
android_bindings/: build.gradle.kts  settings.gradle.kts
android_bindings/buildSrc/src/main/kotlin/: CargoConfig.kt  GradleConfig.kt
android_bindings/gradle/: libs.versions.toml
android_bindings/gradle/wrapper/: gradle-wrapper.properties
android_bindings/jarust/: build.gradle.kts
android_bindings/jarust/src/androidTest/java/com/ghamza/jarust/: ExampleInstrumentedTest.kt
android_bindings/jarust/src/main/java/com/ghamza/jarust/: JarustLogger.kt
android_bindings/jarust/src/main/java/com/ghamza/jarust/internal/: jarust.kt
android_bindings/jarust/src/test/java/com/ghamza/jarust/: ExampleUnitTest.kt
apple/Sources/JanusGateway/: JaConfig.swift  JaConnection.swift  JaHandle.swift  JaHandleDelegate.swift  JaSession.swift  JanusLogger.swift
apple/Sources/Plugins/: Dummy.swift  JaEchoTestHandle.swift  JaEchoTestHandleDelegate.swift  JaSession+Attach.swift
apple/Sources/UniFFI/: JanusGatewayBindings.swift
apple/Tests/JanusGatewayTests/: JanusGatewayTests.swift
contribution/: architecture.html  contribution.html
docs/: book.toml
docs/src/: 00_intro.md  SUMMARY.md
docs/src/contribution/: contribution.md
ios_bindings/: .gitignore  Package.swift
ios_bindings/Sources/Jarust/: Jarust.swift  JarustLogger.swift
ios_bindings/Tests/JarustTests/: JarustTests.swift
ios_bindings/jarust/: jarust.h
ios_bindings/jarust.xcodeproj/: project.pbxproj
ios_bindings/jarust/internal/: jarust.swift
ios_bindings/jarust/jarust.docc/: jarust.md
rslib/: Cargo.toml  uniffi.toml
rslib/src/: config.rs  connection.rs  error.rs  handle.rs  japrotocol.rs  lib.rs  logger.rs  session.rs
rslib/src/plugins/: echotest.rs  mod.rs
src/: callback.rs  connection.rs  context.rs  handle.rs  jacallback.rs  jaconfig.rs  jaconnection.rs  jaerror.rs  jarust.udl  lib.rs  logger.rs  raw_jacallback.rs  raw_jaconfig.rs  raw_jaconnection.rs  raw_jaerror.rs  session.rs
src/plugins/: echotest.rs
uniffi-bindgen/: Cargo.toml
