[package]
name = "jarust-mobile-sdk"
version = "0.1.0"
edition = "2021"

[lib]
name = "jarust"
crate-type = ["cdylib", "staticlib"]

[dependencies]
jarust = "0.1.2"
jarust_plugins = "0.1.2"
log = "0.4.20"
log-panics = "2.1.0"
uniffi = { version = "0.23.0", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.23.0", features = ["build"] }

[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2.0"

[target.'cfg(target_os="android")'.dependencies]
android_logger = "0.13.3"
openssl-sys = { version = "0.9.98", features = ["vendored"] }
