[package]
name = "jarust-mobile-sdk"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "jarust"
crate-type = ["cdylib", "staticlib"]

[dependencies]
jarust = "0.1.5"
jarust_plugins = "0.1.5"
log = "0.4.20"
log-panics = "2.1.0"
serde = "1.0.196"
serde_json = "1.0.112"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread"] }

# Couldn't make the latest uniffi work
uniffi = { version = "0.23.0", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.23.0", features = ["build"] }

[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.3"
